修改app-resource相关的代码,使用UUID进行关系关联